# energy-ts-fundamentals

./: .env.example  .gitignore  01_load_data.ipynb  02_decomposition.ipynb  03_acf_pacf.ipynb  04_baseline_holdout.ipynb  04_ets.ipynb  05_sarima.ipynb  06_backtesting.ipynb  README.md  Untitled.ipynb  main.py  pyproject.toml
src/: utils.py
